html and js outline

--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+    <h1>Rock Paper Scissors</h1>
+
+    <p>Man vs. Machine! Do you have what it takes to defeat the computer?</p>
+    
+    
     <script src="rps.js"></script>
 </body>
 </html>
